trustfall_core/test_data/tests/parse_errors/filter_with_variable_string_instead_of_array_with_variable_string.parse-error.ron
Err(FilterExpectsListNotString("=", "$zero", Pos(
  line: 4,
  column: 39,
)))
